<resources>
    <string name="app_name">Fire Fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="salary">Salary</string>
    <string name="employee_phone">Employee Phone</string>
    <string name="employee_address">Employee Address</string>
    <string name="create_employees">Create Employees</string>
    <string name="employee_name">Employee Name</string>
    <string name="name">Name</string>
    <string name="delete">Delete</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="update">Update</string>
    <string name="update_employee">Update Employee</string>
</resources>
