<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="20dp"
    android:paddingHorizontal="15dp">

    <TextView
        android:id="@+id/emp_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/name"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/delete"
        android:textColor="@android:color/holo_red_dark"/>

    <TextView
        android:id="@+id/emp_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:text="@string/address"
        android:layout_marginTop="7dp"
        android:textSize="20sp"
        android:layout_below="@+id/emp_name"/>

    <TextView
        android:id="@+id/emp_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/phone"
        android:layout_marginTop="7dp"
        android:textSize="15sp"
        android:layout_below="@id/emp_address"/>

    <TextView
        android:id="@+id/emp_salary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/salary"
        android:layout_marginTop="7dp"
        android:textSize="15sp"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/emp_address"/>

    <Button
        android:id="@+id/btn_to_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emp_phone"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:text="@string/update"
        android:textColor="@android:color/white"/>

</RelativeLayout>